fix alignment on landing page

--- a/app/application/static/css/application/index.css
+++ b/app/application/static/css/application/index.css
@@ -232,7 +232,7 @@ body {
 .hero-textbox {
 	width: 100%;
 	position: absolute;
-	top: 50%;
+	top: 70%;
 	left: 55%;
 	z-index: 20;
 	transform: translate(-50%, -50%);
